# Vnlp-scale

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.bootstrap/: source.part00  source.part01  source.part02  source.part03  trigger
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug.yml
.github/workflows/: ci.yml  codeql.yml  materialize.yml  release.yml
benchmarks/: benchmark_generate.py  benchmark_tensor.py
docs/: architecture.md  benchmarking.md  feasibility.md  stage-aware-linear.md  store-format.md
examples/: colab_models.py  colab_runtime.py  colab_ui.py  create_synthetic.py
notebooks/: Vnlp_scale_Chat_Demo.ipynb
src/vnlp_scale/: __init__.py  cli.py  codec.py  engine_np.py  engine_torch.py  errors.py  estimate.py  ingest.py  store.py
tests/: conftest.py  test_cli.py  test_codec.py  test_colab_notebook.py  test_engine.py  test_estimate.py  test_fused_linear.py  test_ingest.py  test_store.py
